Add vertical-align:top to .pixel and line-hight: 0 to .row
To correct the issue when row height is bigger than the child(.pixel)
element needed to add those 2 properties
Now i can add bigger grids and layout will not
break out of the .container

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,4 +27,8 @@ body {
   display: inline-block;
   text-align: center;
   border: 1px solid black;
+  vertical-align: top;
+}
+.row {
+  line-height: 0;
 }
