Add erese button and erese pixel functionality
- Corrected main heading (adde - )
- reduced canvas container to 640px so everything fits nicely

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,8 +20,7 @@ body {
 }
 
 .canvas_container {
-  width: 720px;
-  height: 720px;
+  width: 640px;
   margin: auto;
   box-shadow: 0 0 7px 4px var(--main-bg-color);
 }
@@ -52,6 +51,7 @@ body {
 .controls_btn {
   border: 1px solid black;
   padding: 1.5em;
+  transition: all 0.47s;
 }
 
 .active {
